--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_login_screen">LoginScreen</string>
     <string name="google_client_id">115865438371-cf82nuu576brl30oqnh4qmk1d6gop95f.apps.googleusercontent.com</string>
+    <string name="mobilesdk_app_id">1:115865438371:android:d1dcd9e4ef305948cb5716</string>
+    <string name="oauth_client_id">115865438371-bvo08d23igp22oslvsi9rpeqitm9uahf.apps.googleusercontent.com</string>
+    <string name="current_key_api">AIzaSyAdhPdhF392ArSv6NzzEHAoULPlOiiil7Y</string>
 
 </resources>
